--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -504,10 +504,7 @@ import Layout from "../layout/Layout.astro";
           <div
             class="w-20 h-20 bg-red-100 rounded-full flex items-center justify-center mx-auto mb-4 overflow-hidden"
           >
-            <img
-              src="/images/menestra-nutricion.png"
-              class="w-full h-full"
-            />
+            <img src="/images/menestra-nutricion.png" class="w-full h-full" />
           </div>
           <h3 class="font-semibold text-lg text-gray-900 mb-2">Menestras</h3>
           <p class="text-gray-600 text-sm">
@@ -522,10 +519,7 @@ import Layout from "../layout/Layout.astro";
           <div
             class="w-20 h-20 bg-red-100 rounded-full flex items-center justify-center mx-auto mb-4 overflow-hidden"
           >
-            <img
-              src="/public/images/pescado-nutricion.png"
-              class="w-full h-full"
-            />
+            <img src="/images/pescado-nutricion.png" class="w-full h-full" />
           </div>
           <h3 class="font-semibold text-lg text-gray-900 mb-2">Pescado</h3>
           <p class="text-gray-600 text-sm">
@@ -541,7 +535,7 @@ import Layout from "../layout/Layout.astro";
           <div
             class="w-20 h-20 bg-red-100 rounded-full flex items-center justify-center mx-auto mb-4 overflow-hidden"
           >
-            <img src="/public/images/bazo-nutricion.png" class="w-full h-full" />
+            <img src="/images/bazo-nutricion.png" class="w-full h-full" />
           </div>
           <h3 class="font-semibold text-lg text-gray-900 mb-2">Bazo</h3>
           <p class="text-gray-600 text-sm">
