--- a/src/pages/importancia.astro
+++ b/src/pages/importancia.astro
@@ -3,7 +3,7 @@
 import Layout from "../layout/Layout.astro";
 ---
 
-<Layout title="Importancia de Combatir la Anemia">
+<Layout title="¡Combate la Anemia Infantil!">
   <section class="py-12 px-4 sm:px-6 lg:px-8 max-w-7xl mx-auto">
     <!-- Hero Section -->
     <div
